--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     ]
   },
   "devDependencies": {
-    "pokeapi-js-wrapper": "^1.2.0"
+    "pokeapi-js-wrapper": "^1.2.0",
+    "prop-types": "^15.7.2"
   }
 }
